tests/baselines/reference/generatorTypeCheck57.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck57.ts(3,13): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck57.ts (1 errors) ====
    function* g() {
        class C {
            x = yield 0;
                ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
        };
    }